; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_inline_data.c_ext2fs_inline_data_init.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_inline_data.c_ext2fs_inline_data_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext2_inline_data = type { i8*, i64, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext2fs_inline_data_init(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.ext2_inline_data, align 8
  %6 = alloca [1 x i8], align 1
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = bitcast [1 x i8]* %6 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 1 %7, i8 0, i64 1, i1 false)
  %8 = load i32, i32* %3, align 4
  %9 = getelementptr inbounds %struct.ext2_inline_data, %struct.ext2_inline_data* %5, i32 0, i32 3
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* %4, align 4
  %11 = getelementptr inbounds %struct.ext2_inline_data, %struct.ext2_inline_data* %5, i32 0, i32 2
  store i32 %10, i32* %11, align 8
  %12 = getelementptr inbounds %struct.ext2_inline_data, %struct.ext2_inline_data* %5, i32 0, i32 1
  store i64 0, i64* %12, align 8
  %13 = getelementptr inbounds [1 x i8], [1 x i8]* %6, i64 0, i64 0
  %14 = getelementptr inbounds %struct.ext2_inline_data, %struct.ext2_inline_data* %5, i32 0, i32 0
  store i8* %13, i8** %14, align 8
  %15 = call i32 @ext2fs_inline_data_ea_set(%struct.ext2_inline_data* %5)
  ret i32 %15
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @ext2fs_inline_data_ea_set(%struct.ext2_inline_data*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
